<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ededed"
    android:orientation="vertical"
    tools:context=".ui.activity.PasswordActivity">

    <include layout="@layout/toolbar_button" />

    <EditText
        android:id="@+id/edit_oldPass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/searchBarSize"
        android:layout_marginTop="@dimen/marginPrimary"
        android:background="@drawable/edit_profile"
        android:hint="@string/oldPsd"
        android:inputType="textPassword"
        android:lines="1"
        android:paddingLeft="@dimen/marginM"
        android:paddingRight="@dimen/marginM"
        android:textSize="@dimen/textSize" />

    <EditText
        android:id="@+id/edit_newPass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/searchBarSize"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/marginM"
        android:background="@drawable/edit_profile"
        android:hint="@string/newPsd"
        android:lines="1"
        android:paddingLeft="@dimen/marginM"
        android:paddingRight="@dimen/marginM"
        android:textSize="@dimen/textSize" />
    <EditText
        android:id="@+id/edit_newPass2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/searchBarSize"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/marginM"
        android:background="@drawable/edit_profile"
        android:hint="@string/newPsw"
        android:lines="1"
        android:paddingLeft="@dimen/marginM"
        android:paddingRight="@dimen/marginM"
        android:textSize="@dimen/textSize" />

</LinearLayout>