<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBgGrey"
    tools:context=".ui.activity.AddActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/tv_meetNum"
        android:layout_width="90dp"
        android:layout_height="@dimen/searchBarSize"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="@dimen/marginM"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/marginM"
        android:text="@string/roomNum"
        android:textColor="@color/colorTextB"
        android:textSize="@dimen/textSize" />

    <EditText
        android:id="@+id/et_roomNum"
        android:layout_width="match_parent"
        android:layout_height="@dimen/searchBarSize"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="@dimen/marginM"
        android:layout_toRightOf="@id/tv_meetNum"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:inputType="number"
        android:lines="1"
        android:paddingRight="@dimen/marginM"
        android:textColor="@color/colorTextB"
        android:textSize="@dimen/textSize" />

    <View
        android:id="@+id/view"
        style="@style/fullViewStyle"
        android:layout_below="@id/et_roomNum" />

    <TextView
        android:id="@+id/tv_urName"
        android:layout_width="90dp"
        android:layout_height="@dimen/searchBarSize"
        android:layout_below="@id/view"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/marginM"
        android:text="@string/urName"
        android:visibility="gone"
        android:textColor="@color/colorTextB"
        android:textSize="@dimen/textSize" />

    <EditText
        android:visibility="gone"
        android:id="@+id/et_urName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/searchBarSize"
        android:layout_below="@id/view"
        android:layout_toRightOf="@id/tv_urName"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:lines="1"
        android:paddingRight="@dimen/marginM"
        android:textColor="@color/colorTextB"
        android:textSize="@dimen/textSize"
        android:paddingEnd="@dimen/marginM"
        android:layout_toEndOf="@id/tv_urName" />

    <View
        android:id="@+id/view2"
        style="@style/fullViewStyle"
        android:layout_below="@id/et_urName" />

    <TextView
        android:id="@+id/btn_joinMt"
        android:layout_below="@id/view2"
        android:text="@string/joinMeeting"
        style="@style/textStartMeeting" />

<!--    <TextView-->
<!--        android:id="@+id/tv_choice"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@id/btn_joinMt"-->
<!--        android:layout_marginLeft="@dimen/marginM"-->
<!--        android:layout_marginTop="@dimen/headSize"-->
<!--        android:layout_marginBottom="@dimen/marginPrimary"-->
<!--        android:text="@string/meetingSetting"-->
<!--        android:textColor="@color/colorTextB"-->
<!--        android:textSize="@dimen/textSizeS"-->
<!--        android:layout_marginStart="@dimen/marginM" />-->

<!--    <TextView-->
<!--        android:id="@+id/tv_enableCam"-->
<!--        style="@style/textMeetingSetting"-->
<!--        android:layout_below="@id/tv_choice"-->
<!--        android:layout_toLeftOf="@id/switch_cam"-->
<!--        android:text="@string/enableCam"-->
<!--        android:layout_toStartOf="@id/switch_cam" />-->

<!--    <Switch-->
<!--        android:id="@+id/switch_cam"-->
<!--        android:layout_below="@id/tv_choice"-->
<!--        android:checked="true"-->
<!--        style="@style/switchMeetingSetting" />-->

<!--    <View-->
<!--        android:id="@+id/view3"-->
<!--        style="@style/fullViewStyle"-->
<!--        android:layout_below="@id/tv_enableCam" />-->

<!--    <TextView-->
<!--        android:id="@+id/tv_enableMic"-->
<!--        style="@style/textMeetingSetting"-->
<!--        android:layout_below="@id/view3"-->
<!--        android:layout_toStartOf="@id/switch_mic"-->
<!--        android:layout_toLeftOf="@id/switch_mic"-->
<!--        android:text="@string/enableMic" />-->

<!--    <Switch-->
<!--        style="@style/switchMeetingSetting"-->
<!--        android:id="@+id/switch_mic"-->
<!--        android:layout_below="@id/view3"-->
<!--        android:background="@color/white"-->
<!--        android:checked="true" />-->

<!--    <View-->
<!--        android:id="@+id/view4"-->
<!--        style="@style/fullViewStyle"-->
<!--        android:layout_below="@id/tv_enableMic" />-->

<!--    <TextView-->
<!--        android:id="@+id/tv_enableBroad"-->
<!--        style="@style/textMeetingSetting"-->
<!--        android:layout_below="@id/view4"-->
<!--        android:layout_toStartOf="@id/switch_broad"-->
<!--        android:layout_toLeftOf="@id/switch_broad"-->
<!--        android:text="@string/enableBroad" />-->

<!--    <Switch-->
<!--        style="@style/switchMeetingSetting"-->
<!--        android:id="@+id/switch_broad"-->
<!--        android:layout_below="@id/view4" />-->

<!--    <View-->
<!--        android:id="@+id/view5"-->
<!--        style="@style/fullViewStyle"-->
<!--        android:layout_below="@id/tv_enableBroad" />-->


</RelativeLayout>